samples/_failures_safe/1761170009_ed0cfd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b998a1c.c: In function ‘main’:
./samples/SAFE/__tmp_5b998a1c.c:149:16: error: expected ‘)’ at end of input
  149 |     add_edge(&g
      |             ~  ^
      |                )
./samples/SAFE/__tmp_5b998a1c.c:149:5: error: too few arguments to function ‘add_edge’
  149 |     add_edge(&g
      |     ^~~~~~~~
./samples/SAFE/__tmp_5b998a1c.c:29:6: note: declared here
   29 | void add_edge(Graph *g, int from, int to) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_5b998a1c.c:149:5: error: expected declaration or statement at end of input
  149 |     add_edge(&g
      |     ^~~~~~~~
